--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ BuildGameBeforeLaunch=PlayOnBuild_Default
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
 PlayNumberOfClients=1
@@ -83,8 +83,10 @@ MRUItem4=/Game/Maps/TravelMap
 LastLevel=/Game/Maps/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/MainMenu/HostMenu.HostMenu
+OpenAssetsAtExit=/Game/UI/MainMenu/ServerMenu.ServerMenu
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/MainMenu/ServerMenu
@@ -1634,6 +1636,8 @@ OnlineSubsystemSteam.TimeStamp=2020.10.30-15.41.12
 OnlineSubsystemSteam.LastCompileMethod=Unknown
 SteamShared.TimeStamp=2020.10.30-15.41.43
 SteamShared.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2020.10.30-15.29.33
+PerfCounters.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1660,7 +1664,8 @@ OptionsMenu_C=
 GameInfoInstance_C=PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
-ServerMenu_C=
+ServerMenu_C=PropertyWrapper.DefaultValueCategory.None,
+HostMenu_C=PropertyWrapper.DefaultValueCategory.None,
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
@@ -1678,8 +1683,8 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Border="\"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Appearance.BrushColor\" "
-PanelWidget=
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
 Widget=
 Visual=
 Object=
